completed the incident service on to the next service